--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ background-color: #666666;
             <header>
 
                 <div class="logo">
-                    <img src="Resources/Logo.png" alt="logo">
+                    <img src="Logo.png" alt="logo">
                 </div>
 
                 <nav>
